preparar para nginx

--- a/informacion/templates/proveedores.html
+++ b/informacion/templates/proveedores.html
@@ -22,7 +22,7 @@
         <div class="fondo-barra"></div>
     </a>
 
-    <div class="barra-enlace" id="ruta-comercial">
+    <!--div class="barra-enlace" id="ruta-comercial">
         <h3>DEPARTAMENTOS,<br> PAISES EXTRANJEROS Y RUTAS COMERCIALES</h3>
         <div class="imagen-logo"></div>
         <div class="fondo-barra"></div>
@@ -38,7 +38,7 @@
         <h3>PRODUCTOS INDIVIDUALES (NANDINA)</h3>
         <div class="imagen-logo"></div>
         <div class="fondo-barra"></div>
-    </div>
+    </div-->
 
 </div>
 
