--- a/inicio/templates/base_generic.html
+++ b/inicio/templates/base_generic.html
@@ -67,9 +67,9 @@
                         <h3>Es el instrumento legal por el cual las entidades públicas transmiten la titularidad de
                             ciertos bienes y/o derechos públicos</h3>
                     </a>
-                    <a href="{% url 'brokers' %}">
+                    <!--a href="{% url 'brokers' %}">
                         <h2>Directorio de Brokers</h2>
-                        <h3>Lista de contactos de Brokers</h3>
+                        <h3>Lista de contactos de Brokers</h3-->
                     </a>
                     <a href="{% url 'proveedores' %}">
                         <h2>Directorio de Proveedores</h2>
@@ -212,7 +212,7 @@
                         <a href="{% url 'boletines' %}">Boletines Informativos</a>
                         <a href="{% url 'normativa' %}">Normativa</a>
                         <a href="{% url 'fideicomisos' %}">Fideicomisos</a>
-                        <a href="{% url 'brokers' %}">Directorio de Brokers</a>
+                        <!--a href="{% url 'brokers' %}">Directorio de Brokers</a-->
                         <a href="{% url 'proveedores' %}">Directorio de Proveedores</a>
                         <a href="{% url 'eventos' %}">Eventos</a>
                     </ul>
