--- a/inicio/templates/base_generic.html
+++ b/inicio/templates/base_generic.html
@@ -33,7 +33,7 @@
             <div id="navegador-servicios" class="navegador-seccion">
                 <h2 class="navegador-label navegador-flecha">SERVICIOS</h2>
                 <div class="navegador-menu">
-                    <a href="{% url 'en_desarrollo' %}">
+                    <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/portal/oferta">
                         <h2>Oferta Exportable</h2>
                         <h3>Conoce los productos estrella de las exportaciones Bolivianas</h3>
                     </a>
@@ -197,7 +197,7 @@
                 <div class="footer-esquema-lista">
                     <h2>SERVICIOS</h2>
                     <ul>
-                        <a href="{% url 'en_desarrollo' %}">Oferta Exportable</a>
+                        <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/portal/oferta">Oferta Exportable</a>
                         <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/ConsultaMapa">Mapa Georeferencial</a>
                         <a href="http://vcie.produccion.gob.bo/siexco/comex/consultaPublica/processReport.php">Consulta Dinámica</a>
                         <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/portal/simLogic">Simulador Logístico</a>
