--- a/inicio/templates/base_generic.html
+++ b/inicio/templates/base_generic.html
@@ -217,6 +217,7 @@
                 <div>Viceministerio de Comercio Interno&nbsp;&nbsp; VCI 2020</div>
                 <div id="iconos-copyright">Icon made from <a href="http://www.onlinewebfonts.com/icon">Icon Fonts</a> is licensed by CC BY 3.0
                 </div>
+                <div id="programador">MOISES RUMI GUTIERREZ CALLISAYA email: rumoigut@hotmail.com</div>
             </div>
         </footer>
     </div>
