--- a/static/css/estilos_base.css
+++ b/static/css/estilos_base.css
@@ -720,3 +720,9 @@ footer {
 }
 
 @keyframes spin { 100% { transform:rotate(360deg); } }
+
+
+
+#programador{
+    color: rgba(128, 128, 128, 0.1);
+}
